[tool.poetry]
name = "repl-nix-ap-csp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_ap_csp"}]

[tool.poetry.dependencies]
python = "^3.10"
rsa = "^4.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
